@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3173 2019/07/31 19:30:51 plunky Exp $
+$NetBSD: CHANGES-2019,v 1.3174 2019/07/31 19:31:13 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5130,3 +5130,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated math/R-forecast to 8.7 [brook 2019-07-31]
 	Updated math/R-gdata to 2.18.0 [brook 2019-07-31]
 	Updated cad/qcad to 3.23.0.0 [plunky 2019-07-31]
+	Updated math/R-genetics to 1.3.8.1.2 [brook 2019-07-31]
